WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111305
[Curl] Compile fix after
r144216
https://bugs.webkit.org/show_bug.cgi?id=111305
Summary
[Curl] Compile fix after r144216
peavo
Reported
2013-03-04 05:39:35 PST
The method ResourceRequest::cfURLRequest() got a new parameter, need to update the Curl version as well.
Attachments
Patch
(1.44 KB, patch)
2013-03-04 05:45 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-03-04 05:45:27 PST
Created
attachment 191213
[details]
Patch
Brent Fulgham
Comment 2
2013-03-04 08:06:07 PST
Comment on
attachment 191213
[details]
Patch R=me
WebKit Review Bot
Comment 3
2013-03-04 08:52:01 PST
Comment on
attachment 191213
[details]
Patch Clearing flags on attachment: 191213 Committed
r144634
: <
http://trac.webkit.org/changeset/144634
>
WebKit Review Bot
Comment 4
2013-03-04 08:52:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug