[Curl] Compile fix after r144216 https://bugs.webkit.org/show_bug.cgi?id=111305

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-03-04
Reviewed by Brent Fulgham.

* platform/network/curl/ResourceRequest.h:
(WebCore::ResourceRequest::cfURLRequest): Added new parameter.

Canonical link: https://commits.webkit.org/129679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144634 268f45cc-cd09-0410-ab3c-d52691b4dbfc